# slack-to-discord

./: .gitignore  CHANGELOG.md  README.md  local_cache  pyproject.toml  run_with_retry.sh  setup.py  slack_to_discord.py
.github/workflows/: tests.yml
slack_to_discord/: __init__.py  __main__.py  http_stream.py  importer.py
src/slack_to_discord/: __main__.py  emojis.py  http_stream.py  importer.py
tests/: test_bufferediterator.py  test_http_stream.py
