[project]
name = "slack-to-discord"
version = "1.3.0"
description = "Extract data from a Slack export and import it into Discord"
urls.Repository = "https://github.com/pR0Ps/slack-to-discord"
urls.Changelog = "https://github.com/pR0Ps/slack-to-discord/blob/master/CHANGELOG.md"
readme = "README.md"
license = "GPL-3.0-only"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Operating System :: OS Independent",
  "Topic :: Communications :: Chat",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
requires-python = ">=3.8"
dependencies = [
  "discord.py>=2.0.0,<3.0.0",
  "urllib3>=1.26.12,<3.0.0",
  "iterable-io>=1.0.0,<2.0.0",
]
scripts.slack-to-discord = "slack_to_discord.__main__:main"

[dependency-groups]
test = ["pytest", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/"]
